--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://kit.fontawesome.com/674948443a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>
         Hello World!
     </h1>
-    <p>Eat ass & skate fast</p>
+    <p class="small-text">Eat ass & skate fast. Hello, how are you?</p>
+    <i class="fa-solid fa-phone">Please</i>
 </body>
 </html>
