last of the night

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <h1>
         Hello World!
     </h1>
-    <p class="small-text">Eat ass & skate fast. Hello, how are you?</p>
-    <i class="fa-solid fa-phone">Please</i>
+    <p class="small-text">Eat ass & skate fast.</p>
 </body>
 </html>
