--- a/HomePage.html
+++ b/HomePage.html
@@ -106,7 +106,7 @@
         </div>
         <div class="fgc-btn"><a  href="">View Designs</a></div>
     </div>
-    <div class="fg-card">
+    <div class="fg-card" style="display: inline;">
         <div class="fgc-top">
             <img src="http://localhost:3000/images/raspberry-6368999_1280.png" alt="" style="width: 100%;">
         </div>
